# portofolio_sample

./: db.sqlite3  pyproject.toml  requirements.txt
manage_app/: forms.py  models.py  urls.py  views.py
manage_app/migrations/: 0001_initial.py  0002_alter_day_what_kinda_spi.py  0003_day_author.py  0004_alter_day_author.py  0005_day_file_upload_alter_day_detail_text.py  0006_alter_day_what_kinda_spi.py
manage_app/templates/manage_app/: add.html  base.html  day_confirm_delete.html  day_detail.html  day_form.html  day_list.html  login.html  signup.html
project/: Procfile  settings.py  urls.py
static/css/: style.css
