[tool.poetry]
name = "manage-app"
version = "0.1.0"
description = "manage_app"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "manage_app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = "^4.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
